--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "bootstrap": "^5.2.3",
+    "gulp-beautify": "^3.0.0",
     "gulp-sass": "^5.1.0",
     "pug": "^3.0.2",
     "vite": "^4.1.1"
